<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        style="@style/MyButton"
        android:layout_weight="1"
        android:text="@string/example_n_of_nexternal_intent"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        style="@style/MyButton"
        android:layout_weight="1"
        android:text="@string/example_nof_n_internal_intent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        style="@style/MyButton"
        android:layout_weight="1"
        android:text="@string/example_nof_n_result_activity"
        android:textSize="30sp" />

    <Button
        style="@style/MyButton"
        android:id="@+id/button4"
        android:layout_weight="1"
        android:onClick="openSettings"
        android:textSize="30sp"
        android:text="@string/eample_of_n_system_settings" />

</LinearLayout>